# CMake-Beginners

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/camera/: c.cpp
apps/camera2/: CMakeLists.txt  c.cpp
apps/coord/: c.cpp
apps/coord2/: c.cpp
apps/hello_square/: CMakeLists.txt  helloSquare.cpp
apps/hello_triangle/: CMakeLists.txt  helloTriangle.cpp
apps/hello_triangle_e1/: CMakeLists.txt  e1.cpp
apps/hello_triangle_e2/: CMakeLists.txt  e2.cpp
apps/hello_triangle_e3/: CMakeLists.txt  e3.cpp
apps/hello_window/: CMakeLists.txt  helloWindow.cpp
apps/shader_changes/: CMakeLists.txt  c1.cpp  c2.cpp  c3.cpp
apps/shader_changes/c4/: CMakeLists.txt  c4.cpp
apps/texture1/: CMakeLists.txt  t1.cpp
apps/texture2/: CMakeLists.txt  t1.cpp
apps/texture2/shaders/: texture.fs
apps/transform/: CMakeLists.txt  t.cpp
apps/tutorial1/: CMakeLists.txt  dummy.cpp
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/vis/include/: shader_s.h
libs/vis/src/: CMakeLists.txt
