# add_subdirectory(tutorial1)
# add_subdirectory(hello_window)
# add_subdirectory(hello_triangle)
# add_subdirectory(hello_square)
# add_subdirectory(hello_triangle_e1)
# add_subdirectory(hello_triangle_e2)
# add_subdirectory(hello_triangle_e3)
# add_subdirectory(shader_changes)
# add_subdirectory(texture1)
# add_subdirectory(texture2)
# add_subdirectory(transform)
# add_subdirectory(coord)
# add_subdirectory(coord2)
# add_subdirectory(camera)
add_subdirectory(camera2)